Sun Apr 12 17:49:19 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: split IRGenerator.

	* net/loveruby/cflat/compiler/IRGenerator.java: new class.

	* net/loveruby/cflat/compiler/Compiler.java: call IRGenerator.

Sun Apr 12 16:48:14 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: simplify BinaryOp
	  checking, utilizing destructive methods.

Sun Apr 12 16:37:16 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Visitor.java: make destructive
	  again.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

	* net/loveruby/cflat/compiler/LocalResolver.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/compiler/DereferenceChecker.java: ditto.

	* net/loveruby/cflat/compiler/JumpResolver.java: ditto.

	* net/loveruby/cflat/ast/AbstractAssignNode.java: ditto.

	* net/loveruby/cflat/ast/CondExprNode.java: ditto.

Sun Apr 12 15:31:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Visitor.java: make all return types
	  generic.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

	* net/loveruby/cflat/ast/*.java: ditto.

Mon Apr  6 07:04:30 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: call JumpResolver at
	  last.

	* net/loveruby/cflat/compiler/TypeChecker.java: TypeChecker has
	  required ReturnNode.function, provide "current function" by
	  myself.

Sat Apr  4 23:47:02 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ASTVisitor.java: #visit returns a node
	  which has same type with the argument, to allow non-destructive
	  AST rewriting.

	* net/loveruby/cflat/ast/*Node.java (#accept): ditto.

	* net/loveruby/cflat/compiler/Visitor.java: ditto.

	* net/loveruby/cflat/compiler/*.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: make
	  non-destructive.
